--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
 asgiref==3.3.4
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.3
 django-ckeditor==6.0.0
+django-ip-geolocation==1.6.1
 django-js-asset==1.2.2
+django-livereload-server==0.3.2
+idna==2.10
 Pillow==8.2.0
 pytz==2021.1
+requests==2.25.1
+six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
+tornado==6.1
+urllib3==1.26.5
