--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.5.30
 chardet==4.0.0
 Django==3.2.3
 django-ckeditor==6.0.0
+django-crispy-forms==1.11.2
 django-ip-geolocation==1.6.1
 django-js-asset==1.2.2
 django-livereload-server==0.3.2
