--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-crispy-forms==1.11.2
 django-ip-geolocation==1.6.1
 django-js-asset==1.2.2
 django-livereload-server==0.3.2
+gunicorn==20.1.0
 idna==2.10
 Pillow==8.2.0
 pytz==2021.1
@@ -17,3 +18,4 @@ soupsieve==2.2.1
 sqlparse==0.4.1
 tornado==6.1
 urllib3==1.26.5
+whitenoise==5.3.0
