--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-livereload-server==0.3.2
 gunicorn==20.1.0
 idna==2.10
 Pillow==8.2.0
+psycopg2-binary==2.9.2
 pytz==2021.1
 requests==2.25.1
 six==1.16.0
